# jaxfluids

./: .pre-commit-config.yaml  CITATION.bib  README.md  environment.yaml  pyproject.toml  setup.py
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: python-package-conda.yml
jaxfluids/: __init__.py  boundary_condition.py  domain_information.py  flux_computation.py  initializer.py  input_reader.py  simulation_manager.py  space_solver.py  unit_handler.py  utilities.py
jaxfluids/forcing/: forcing.py  pid_control.py
jaxfluids/iles/: ALDM.py  ALDM_WENO1.py  ALDM_WENO3.py  ALDM_WENO5.py
jaxfluids/io_utils/: logger.py  output_writer.py
jaxfluids/levelset/: geometry_calculator.py  helper_functions.py  interface_flux_computer.py  interface_quantity_computer.py  levelset_creator.py  levelset_handler.py  levelset_reinitializer.py  quantity_extender.py
jaxfluids/materials/: __init__.py  ideal_gas.py  material.py  material_manager.py  safe_ideal_gas.py  stiffened_gas.py  tait.py
jaxfluids/post_process/: __init__.py  post_process_utils.py
jaxfluids/shock_sensor/: ducros.py  shock_sensor.py
jaxfluids/solvers/: flux_splitting_scheme.py  high_order_godunov.py  source_term_solver.py
jaxfluids/solvers/riemann_solvers/: AUSMP.py  HLL.py  HLLC.py  HLLCLM.py  LaxFriedrichs.py  RiemannNN.py  Rusanov.py  RusanovNN.py  __init__.py  eigendecomposition.py  riemann_solver.py  signal_speeds.py
jaxfluids/stencils/: __init__.py  spatial_derivative.py  spatial_reconstruction.py
jaxfluids/stencils/derivative/: deriv_fourth_order_center.py  deriv_fourth_order_face.py  deriv_second_order_center.py  deriv_second_order_face.py  second_deriv_fourth_order_center.py  second_deriv_second_order_center.py
jaxfluids/stencils/levelset/: deriv_first_order.py  deriv_first_order_subcell_fix.py  houc3.py  houc5.py  houc7.py  weno3_deriv.py  weno5_deriv.py
jaxfluids/stencils/reconstruction/: central_fourth_order.py  central_second_order.py  teno5.py  weno1_js.py  weno3_fp.py  weno3_js.py  weno3_n.py  weno3_nn_opt1.py  weno3_nn_opt2.py  weno3_z.py  weno5_js.py  weno5_z.py  weno6_cu.py  weno6_cum1.py  weno6_cum2.py  weno6_cumd.py  weno7_js.py  weno9_js.py
jaxfluids/time_integration/: RK2.py  RK3.py  __init__.py  euler.py  time_integrator.py
jaxfluids/turb/: turb_init_cond.py  turb_stats.py  turb_stats_manager.py  turb_utils.py
